mschally: dziala otwieranie plikow z danymy wyjsciowymi, dodano przegladanie drzewa infrastruktury systemu
git-svn-id: https://kask.eti.pg.gda.pl/svn/kernelhive/KernelHive/src@463 1473d755-6451-4e3e-83a9-0691c74848a3